2008-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_gets): Use readline() for reading inline data from
	pseudofile '-'.

2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
	Allow user to set colorbar label rotatation if the bar is vertical.

	* src/datafile(adjust_binary_use_spec): Allow more than one binary
	file in a single "plot" command.

2008-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_set_color): Decouple dash type from line color.
	Code clean-up. Use shared routines int_warn(), gp_alloc().

2008-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_fillbox CGM_filled_polygon):  Move the
	management of fill styles and pm3d fill from CGM_fillbox() to 
	CGM_filled_polygon().  This is necessary because while boxes
	and histograms call filled_polygon() via term->fillbox(),
	the pm3d code calls term->filled_polygon() directly.  Bugfix.

2008-02-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_format set_tics set_tic_prop) docs/gnuplot.doc:
	Allow the tic format to be provided as a string variable.
	Also introduce a format keyword for "set tics" and "set {axis} tics".
	"set tics format 'foo'"  is equivalent to "set format 'foo'"
	"set ytics format 'baz'" is equivalent to "set format y 'baz'"

2008-02-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (map_position place_objects) src/graphics.h src/mouse.c
	src/color.c:  Change map_position() to return (int) x,y rather than
	(unsigned int). Callers are modified accordingly.  This avoids implicit
	casting that breaks clipping calculations on ia64 and PPC.
	This patchset fixes clipping of labels and rectangles.  Bugfix.

2008-02-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/os2/gclient.c: Use the font palette dialog instead of the standard
	font selection dialog. Still switcheable via #define STANDARD_FONT_DIALOG.