@@ -3,6 +3,10 @@
 	* src/datafile.c (df_gets): Use readline() for reading inline data from
 	pseudofile '-'.
 
+	* src/graphics.c (boundary): Be more precise in estimating the vertical
+	space required to accommodate rotated tick labels on x and x2 axes.
+	Bug #1879907
+
 2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
